--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -4,10 +4,34 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Présentation</title>
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="/civi-master/public/css/app.css">
+    <link rel="stylesheet" href="presentation.css">
 </head>
 
 <body>
    
-</body>
+   
+   
+   
+   <div class="Title">
+   
+   
+   <div>
+   
+   <h1>Présentation</h1>
+   
+   <h2>Ce que vous devez savoir :</h2>
+   
+   
+  <p>Le Diplôme Universitaire de Technologie (DUT) Métiers du Mutlimédia et de l'Internet (MMI) est un diplôme reconnu par l'Etat qui s'effectue en 2ans en formation initiale</p>
+   
+   </div>
+   
+   
+   
+   </div>
+   
+   
+   
+</body>   
 </html>
