--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Présentation</title>
-    <link rel="stylesheet" href="/civi-master/public/css/app.css">
+    <link rel="stylesheet" href="../public/css/app.css">
     <link rel="stylesheet" href="presentation.css">
 </head>
 
