--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Présentation</title>
     <link rel="stylesheet" href="../public/css/app.css">
-    <link rel="stylesheet" href="presentation.css">
+    <link rel="stylesheet" href="/civi-master/presentation/presentation.css">
 </head>
 
 <body>
@@ -13,7 +13,7 @@
    
    
    
-   <div class="Title">
+   <div class="title">
    
    
    <div>
@@ -23,7 +23,25 @@
    <h2>Ce que vous devez savoir :</h2>
    
    
-  <p>Le Diplôme Universitaire de Technologie (DUT) Métiers du Mutlimédia et de l'Internet (MMI) est un diplôme reconnu par l'Etat qui s'effectue en 2ans en formation initiale</p>
+  <p>Le Diplôme Universitaire de Technologie (DUT) Métiers du Mutlimédia et de l'Internet (MMI) est un diplôme reconnu par l'Etat qui s'effectue en 2 ans en formation initiale.
+ </p>
+  <p>Ce DUT est très polyvalent, les matières enseignées sont diverses et variées. [24] matières en tout, d'Anglais au Réseau ainsi qu'à l'Esthétique et l'expression artistique. Les élèves y sont formés par des enseignants qualifiés dans leur domaine. Les intervenants apportent un côté professionnel pour une formation en initiale.
+    
+  
+</p>
+
+<div class="video">
+                <object type="application/x-shockwave-flash" width="400" height="222" data="https://www.youtube.com/v/OBx8y2lr-pE">
+  <param name="movie" value="https://www.youtube.com/v/sqN2voKMhH8" />
+  <param name="wmode" value="transparent" />
+                 </object>
+            </div>
+
+
+
+
+
+
    
    </div>
    
