--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -9,47 +9,50 @@
 </head>
 
 <body>
-   
-   
-   
-   
-   <div class="title">
-   
-   
-   <div>
-   
-   <h1>Présentation</h1>
-   
-   <h2>Ce que vous devez savoir :</h2>
-   
-   
-  <p>Le Diplôme Universitaire de Technologie (DUT) Métiers du Mutlimédia et de l'Internet (MMI) est un diplôme reconnu par l'Etat qui s'effectue en 2 ans en formation initiale.
- </p>
-  <p>Ce DUT est très polyvalent, les matières enseignées sont diverses et variées. [24] matières en tout, d'Anglais au Réseau ainsi qu'à l'Esthétique et l'expression artistique. Les élèves y sont formés par des enseignants qualifiés dans leur domaine. Les intervenants apportent un côté professionnel pour une formation en initiale.
-    
-  
-</p>
 
-<div class="video">
+
+
+
+    <div class="title">
+
+
+        <div class="content">
+
+            <h1>Présentation</h1>
+
+            <h2>Ce que vous devez savoir :</h2>
+
+            <p>Le Diplôme Universitaire de Technologie (DUT) Métiers du Mutlimédia et de l'Internet (MMI) est un diplôme reconnu par l'Etat qui s'effectue en 2 ans en formation initiale.
+            </p>
+
+            <p>Ce DUT est très polyvalent, les matières enseignées sont diverses et variées. [24] matières en tout, d'Anglais au Réseau ainsi qu'à l'Esthétique et l'expression artistique. Les élèves y sont formés par des enseignants qualifiés dans leur domaine. Les intervenants apportent un côté professionnel pour une formation en initiale.
+
+            </p>
+
+            <div class="video">
                 <object type="application/x-shockwave-flash" width="400" height="222" data="https://www.youtube.com/v/OBx8y2lr-pE">
-  <param name="movie" value="https://www.youtube.com/v/sqN2voKMhH8" />
-  <param name="wmode" value="transparent" />
+                    <param name="movie" value="https://www.youtube.com/v/sqN2voKMhH8" />
+                    <param name="wmode" value="transparent" />
                  </object>
             </div>
 
+            <h2>Ce que vous ne savez pas encore :</h2>
+
+            <p>Cette formation, très complète, forme les nouveaux intégrateurs de demain, les nouveaux graphistes qui exposeront leur talents sur des affiches publicitaires, de nouveaux developpeurs d'applications mobile, ou bien peut-être le prochain Spielberg. De nouveaux talents, de nouvelles passions grandissent chaque jour.
+            </p>
+
+            <h2>Ils sont parmis nous :</h2>
+
+            <p>Vous recherchez un étudiant ? Un profil ? un talent ? vous recherchez la perle rare ?
+                <span>Bienvenue sur notre site de CV en ligne  [CIVI].</span>Nous avons créée un site de recrutement de talents. Chacun des étudiants issus de la formation MMI a un bagage très large en matière de polyvalence. Vous souhaitez rechercher un profil particulier ? Alors n'hésitez plus, rendez vous sur la page d'acceuil et nous vous guiderons pour que votre expérience ce passe au mieux. </p>
+        
+        </div>
 
 
 
+    </div>
 
 
-   
-   </div>
-   
-   
-   
-   </div>
-   
-   
-   
+
 </body>   
 </html>
