--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Présentation</title>
     <link rel="stylesheet" href="../public/css/app.css">
-    <link rel="stylesheet" href="/civi-master/presentation/presentation.css">
+    <link rel="stylesheet" href="../presentation/presentation.css">
+
 </head>
 
 <body>
@@ -45,7 +47,7 @@
 
             <p>Vous recherchez un étudiant ? Un profil ? un talent ? vous recherchez la perle rare ?
                 <span>Bienvenue sur notre site de CV en ligne  [CIVI].</span>Nous avons créé un site de recrutement de talents. Chacun des étudiants issus de la formation MMI a un bagage très large en matière de polyvalence. Vous souhaitez rechercher un profil particulier ? Alors n'hésitez plus, rendez vous sur la page d'acceuil et nous vous guiderons pour que votre expérience ce passe au mieux. </p>
-        
+
         </div>
 
 
@@ -54,5 +56,6 @@
 
 
 
-</body>   
+</body>
+
 </html>
