--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -43,7 +43,7 @@
             <p>Cette formation, très complète, forme les nouveaux intégrateurs de demain, les nouveaux graphistes qui exposeront leur talents sur des affiches publicitaires, de nouveaux developpeurs d'applications mobile, ou bien peut-être le prochain Spielberg. De nouveaux talents, de nouvelles passions grandissent chaque jour.
             </p>
 
-            <h2>Ils sont parmis nous :</h2>
+            <h2>Ils sont parmi nous :</h2>
 
             <p>Vous recherchez un étudiant ? Un profil ? un talent ? vous recherchez la perle rare ?
                 <span>Bienvenue sur notre site de CV en ligne  [CIVI].</span>Nous avons créé un site de recrutement de talents. Chacun des étudiants issus de la formation MMI a un bagage très large en matière de polyvalence. Vous souhaitez rechercher un profil particulier ? Alors n'hésitez plus, rendez vous sur la page d'acceuil et nous vous guiderons pour que votre expérience ce passe au mieux. </p>
