--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -15,7 +15,7 @@
 
 
 
-    <div class="title">
+    <div class="container-presentation">
 
 
         <div class="content">
@@ -47,6 +47,8 @@
 
             <p>Vous recherchez un étudiant ? Un profil ? un talent ? vous recherchez la perle rare ?
                 <span>Bienvenue sur notre site de CV en ligne  [CIVI].</span>Nous avons créé un site de recrutement de talents. Chacun des étudiants issus de la formation MMI a un bagage très large en matière de polyvalence. Vous souhaitez rechercher un profil particulier ? Alors n'hésitez plus, rendez vous sur la page d'acceuil et nous vous guiderons pour que votre expérience ce passe au mieux. </p>
+
+            <button type="submit" class="btn w-100">Pour y acceder</button>
 
         </div>
 
