--- a/presentation/presentation.html
+++ b/presentation/presentation.html
@@ -48,7 +48,9 @@
             <p>Vous recherchez un étudiant ? Un profil ? un talent ? vous recherchez la perle rare ?
                 <span>Bienvenue sur notre site de CV en ligne  [CIVI].</span>Nous avons créé un site de recrutement de talents. Chacun des étudiants issus de la formation MMI a un bagage très large en matière de polyvalence. Vous souhaitez rechercher un profil particulier ? Alors n'hésitez plus, rendez vous sur la page d'acceuil et nous vous guiderons pour que votre expérience ce passe au mieux. </p>
 
-            <button type="submit" class="btn w-100">Pour y acceder</button>
+            <a href="{{ route(" search ") }}" title="Accéder au moteur de recherche">Pour y acceder<i class="fas fa-arrow-right"></i>
+
+                </a>
 
         </div>
 
