--- a/offres/offres.html
+++ b/offres/offres.html
@@ -52,11 +52,12 @@
                     <div class="row">
                         <a class="offer-link" href="/offers/1">
                             <div class="card card-horizontal-md-up card-offer">
-                                <img class="card-img" src="https://civi.arnaux.cf/storage/img/enterprise-logos/arno-co.jpg" alt="Arno &amp; Co" data-pagespeed-url-hash="857315774" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+                                <img class="card-img" src="https://civi.arnaux.cf/storage/img/enterprise-logos/arno-co.jpg" alt="logo de l'entreprise" data-pagespeed-url-hash="857315774" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+                                <img class="card-img" src="https://civi.arnaux.cf/storage/img/enterprise-logos/arno-co.jpg" alt="logo de l'entreprise" data-pagespeed-url-hash="857315774" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
                                 <div class="card-block">
-                                    <h5 class="card-title">uiyhjn</h5>
-                                    <p class="card-text">uihyjb</p>
-                                    <br>Arno &amp;Co
+                                    <h5 class="card-title">Nom de l'offre</h5>
+                                    <p class="card-text">description de l'offre, blablabla</p>
+                                    <br>Entreprise
 
                                 </div>
                             </div>
