--- a/offres/offres.html
+++ b/offres/offres.html
@@ -57,7 +57,7 @@
                                 <div class="card-block">
                                     <h5 class="card-title">Nom de l'offre</h5>
                                     <p class="card-text">description de l'offre, blablabla</p>
-                                    <br>Entreprise
+                                    <h2>Entreprise</h2>
 
                                 </div>
                             </div>
