--- a/offres/affichageoffre.html
+++ b/offres/affichageoffre.html
@@ -58,8 +58,8 @@
                 </div>
             </nav>
             <main>
-                <div class="container">
-                    <div class="row">
+                <div class="container affichage">
+                    <div class="row row-margin">
                         <a href="https://civi.arnaux.cf/offers">
                             <i class="material-icons icon-in-link">arrow_back</i>
                             Retourner aux offres
@@ -73,7 +73,7 @@
 						<br>
                          Nom de l'entreprise
 						<br>
-                        <a href="https://arno.arnaux.cf">lien de l'entreprise</a>
+                        <a href="https://arno.arnaux.cf">Lien de l'entreprise</a>
                         <br>Durée du stage
 
                     </div>
