--- a/offres/affichageoffre.html
+++ b/offres/affichageoffre.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -72,7 +73,7 @@
                     <h1 class="title">Developpeur Front</h1>
                     <br>
                     <br>
-                    <div>
+                    <div class="description-stage">
                         <h2>Description du stage :</h2>
                         <p>Quid? qui se etiam nunc subsidiis patrimonii aut amicorum liberalitate sustentant, hos perire patiemur? An, si qui frui publico non potuit per hostem, hic tegitur ipsa lege censoria; quem is frui non sinit, qui est, etiamsi non appellatur, hostis, huic ferri auxilium non oportet? Retinete igitur in provincia diutius eum, qui de sociis cum hostibus, de civibus cum sociis faciat pactiones, qui hoc etiam se pluris esse quam collegam putet, quod ille vos tristia voltuque deceperit, ipse numquam se minus quam erat, nequam esse simularit. Piso autem alio quodam modo gloriatur se brevi tempore perfecisse, ne Gabinius unus omnium nequissimus existimaretur.</p>
                     </div>
@@ -86,15 +87,26 @@
                     <h2>Lieu :</h2>
                     <p>Champs-sur-Marne, 77420</p>
                     <br>
-                    <a href="https://arno.arnaux.cf">
-                        <h2 class="link">Lien de l'entreprise</h2>
-
-                    </a>
-                    <br>
 
                     <h2>Durée du stage :</h2>
                     <p>De 2 à 6 mois</p>
 
+                </div>
+            </div>
+            <div class="entreprise">
+
+                <img src="http://miam-images.m.i.pic.centerblog.net/2af8a4bc.png" alt="" class="photo">
+                <a href="https://arno.arnaux.cf">
+                    <h2 class="link">Lien de l'entreprise</h2>
+
+                </a>
+                <br>
+                <div class="description-entreprise">
+                    <h2>Description de l'Entreprise :</h2>
+                    <p>Quid? qui se etiam nunc subsidiis patrimonii aut amicorum liberalitate sustentant, hos perire patiemur? An, si qui frui publico non potuit per hostem, hic tegitur ipsa lege censoria; quem is frui non sinit, qui est, etiamsi non appellatur, hostis, huic ferri auxilium non oportet? Retinete igitur in provincia diutius eum, qui de sociis cum hostibus, de civibus cum sociis faciat pactiones, qui hoc etiam se pluris esse quam collegam putet, quod ille vos tristia voltuque deceperit, ipse numquam se minus quam erat, nequam esse simularit. Piso autem alio quodam modo gloriatur se brevi tempore perfecisse, ne Gabinius unus omnium nequissimus existimaretur. Eius populus ab incunabulis primis ad usque pueritiae tempus extremum, quod annis circumcluditur fere trecentis, circummurana pertulit bella, deinde aetatem ingressus adultam post multiplices bellorum aerumnas Alpes transcendit et fretum, in iuvenem erectus et virum ex omni plaga quam orbis ambit inmensus, reportavit laureas et triumphos, iamque vergens in senium et nomine solo aliquotiens vincens ad tranquilliora vitae discessit.</p>
+                    <br>
+                    <h2> Situation géographique :</h2>
+                    <p>Paris 15, 75015</p>
                 </div>
             </div>
         </main>
@@ -123,4 +135,5 @@
     </div>
     <script src="https://civi.arnaux.cf/js/app.js" defer></script>
 </body>
+
 </html>
