--- a/offres/affichageoffre.html
+++ b/offres/affichageoffre.html
@@ -72,7 +72,7 @@
                 <div class="container affichage">
 
                     <!-- Les infos de l'offre sont juste dans cette div -->
-                    <div class="row">
+                    <div class="row stage">
                         <h1 class="title">Developpeur Front</h1>
                         <br>
                         <br>
