--- a/offres/offres.html
+++ b/offres/offres.html
@@ -34,10 +34,10 @@
             <!-- Modifie tout dans le main, met une offre dans un container row -->
             <div class="container">
                 <!-- l'offre commence ici -->
-                <div class="row larg">
+                <div class="row large">
                     <a class="offer-link" href="/offers/1">
-                        <div class="card card-horizontal-md-up card-offer"> <img class="card-img" src="http://www.kinyu-z.net/data/wallpapers/206/1426857.jpg" alt="logo de l'entreprise" data-pagespeed-url-hash="857315774" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
-                            <div class="offres-card">
+                        <div class="card card-horizontal card-offer"> <img class="card-img" src="http://www.kinyu-z.net/data/wallpapers/206/1426857.jpg" alt="logo de l'entreprise" data-pagespeed-url-hash="857315774" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">
+                            <div class="card-text-offer">
                                 <h5 class="card-title">Developpeur Front</h5> <span class="card-description"> Description de l'offre</span>
                                 <br> </div>
                             <h2 class="name-firm">Entreprise</h2> </div>
