--- a/offres/affichageoffre.html
+++ b/offres/affichageoffre.html
@@ -12,19 +12,18 @@
     <link href="./lecssquetumodifies.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400|Lato|Source+Sans+Pro:400,600,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet">
-</head>
+    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet"> </head>
 
 <body>
+
     <div id="app">
         <nav class="navbar navbar-expand-md bg-light">
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#app-navbar-collapse" aria-expanded="false">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
+                <span class="navbar-toggler-icon"></span>
+            </button>
             <a class="navbar-brand" href="https://civi.arnaux.cf/offers">
-                    <img src="../public/img/logo.svg" alt="CiVi" height="50" data-pagespeed-url-hash="4207360981" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">CiVi
+                <img src="../public/img/logo.svg" alt="CiVi" height="50" data-pagespeed-url-hash="4207360981" onload="pagespeed.CriticalImages.checkImageForCriticality(this);">CiVi </a>
 
-                </a>
             <div class="collapse navbar-collapse" id="app-navbar-collapse">
                 <ul class="navbar-nav mr-auto">&nbsp;</ul>
                 <ul class="navbar-nav navbar-right">
@@ -38,21 +37,20 @@
                         <a href="https://civi.arnaux.cf/offers" class="nav-link">Les offres</a>
                     </li>
                     <li class="dropdown nav-item">
-                        <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" role="button" aria-expanded="false" aria-haspopup="true">iouyhj
-</a>
+                        <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" role="button" aria-expanded="false"
+                            aria-haspopup="true">iouyhj </a>
                         <ul class="dropdown-menu">
                             <li class="dropdown-item">
-                                <a href="https://civi.arnaux.cf/profile">Profil
-</a>
+                                <a href="https://civi.arnaux.cf/profile">Profil </a>
                             </li>
+
                             <div class="dropdown-divider"></div>
                             <li class="dropdown-item">
                                 <a href="https://civi.arnaux.cf/logout" aria-labelledby="dropdownMenu" onclick="event.preventDefault();
-                                                     document.getElementById('logout-form').submit();">Déconnexion
-</a>
-                                <form id="logout-form" action="https://civi.arnaux.cf/logout" method="POST" style="display: none;">
-                                    <input type="hidden" name="_token" value="q5jb0GxthaYlbFM5aviFC96tBzFM6YllTzvbfDfs">
-                                </form>
+                                                     document.getElementById('logout-form').submit();">Déconnexion </a>
+                                <form id="logout-form" action="https://civi.arnaux.cf/logout" method="POST"
+                                    style="display: none;">
+                                    <input type="hidden" name="_token" value="q5jb0GxthaYlbFM5aviFC96tBzFM6YllTzvbfDfs"> </form>
                             </li>
                         </ul>
                     </li>
@@ -60,84 +58,99 @@
             </div>
         </nav>
         <main>
-            <div class="row row-margin">
+
+            <div class="row row-return">
                 <a href="https://civi.arnaux.cf/offers">
 
-                    <h2> <i class="material-icons icon-in-link">arrow_back</i>Retourner aux offres</h2>
+                    <h2>
+                        <i class="material-icons icon-in-link">arrow_back</i>Retourner aux offres</h2>
                 </a>
             </div>
-            <div class="main">
 
+            <div class="affichage-offre-contenu">
 
-                <div class="container affichage">
-
+                <div class="container affichage-offre">
                     <!-- Les infos de l'offre sont juste dans cette div -->
+
                     <div class="row stage">
-                        <h1 class="title">Developpeur Front</h1>
-                        <br>
-                        <br>
+
+                        <h1 class="offer-name">Developpeur Front</h1>
+
                         <div class="description-stage">
+
                             <h2>Description du stage :</h2>
-                            <p>Quid? qui se etiam nunc subsidiis patrimonii aut amicorum liberalitate sustentant, hos perire patiemur? An, si qui frui publico non potuit per hostem, hic tegitur ipsa lege censoria; quem is frui non sinit, qui est, etiamsi non appellatur, hostis, huic ferri auxilium non oportet? Retinete igitur in provincia diutius eum, qui de sociis cum hostibus, de civibus cum sociis faciat pactiones, qui hoc etiam se pluris esse quam collegam putet, quod ille vos tristia voltuque deceperit, ipse numquam se minus quam erat, nequam esse simularit. Piso autem alio quodam modo gloriatur se brevi tempore perfecisse, ne Gabinius unus omnium nequissimus existimaretur.</p>
+
+                            <p>Quid? qui se etiam nunc subsidiis patrimonii aut amicorum liberalitate sustentant, hos perire
+                                patiemur? An, si qui frui publico non potuit per hostem, hic tegitur ipsa lege censoria;
+                                quem is frui non sinit, qui est, etiamsi non appellatur, hostis, huic ferri auxilium non
+                                oportet? Retinete igitur in provincia diutius eum, qui de sociis cum hostibus, de civibus
+                                cum sociis faciat pactiones, qui hoc etiam se pluris esse quam collegam putet, quod ille
+                                vos tristia voltuque deceperit, ipse numquam se minus quam erat, nequam esse simularit. Piso
+                                autem alio quodam modo gloriatur se brevi tempore perfecisse, ne Gabinius unus omnium nequissimus
+                                existimaretur.</p>
                         </div>
-                        <br>
-                        <h2>Nom de l'entreprise : </h2>
-                        <p>J'aime les pommes</p>
-                        <br>
-                        <h2>Compétences souhaitées :</h2>
-                        <p>Lorem ipsum lorem lorem ipsum ipsum, psumpsumlorem.</p>
-                        <br>
-                        <h2>Lieu :</h2>
-                        <p>Champs-sur-Marne, 77420</p>
-                        <br>
 
                         <h2>Durée du stage :</h2>
-                        <p>De 2 à 6 mois</p>
 
+                        <p>De 2 à 6 mois</p>
                     </div>
                 </div>
+
                 <div class="entreprise">
 
-                    <img src="http://miam-images.m.i.pic.centerblog.net/2af8a4bc.png" alt="" class="photo">
-                    <a href="https://arno.arnaux.cf">
-                        <h2 class="link">Lien de l'entreprise</h2>
+                    <h2>J'aime les pommes</h2>
+                    <a class="link" href="https://arno.arnaux.cf">
 
-                    </a>
+                        <h2>Lien de l'entreprise</h2>
+                        <img src="http://miam-images.m.i.pic.centerblog.net/2af8a4bc.png" alt=""
+                            class="photo"> </a>
                     <br>
+
                     <div class="description-entreprise">
-                        <h2>Description de l'Entreprise :</h2>
-                        <p>Quid? qui se etiam nunc subsidiis patrimonii aut amicorum liberalitate sustentant, hos perire patiemur? An, si qui frui publico non potuit per hostem, hic tegitur ipsa lege censoria; quem is frui non sinit, qui est, etiamsi non appellatur, hostis, huic ferri auxilium non oportet? Retinete igitur in provincia diutius eum, qui de sociis cum hostibus, de civibus cum sociis faciat pactiones, qui hoc etiam se pluris esse quam collegam putet, quod ille vos tristia voltuque deceperit, ipse numquam se minus quam erat, nequam esse simularit. Piso autem alio quodam modo gloriatur se brevi tempore perfecisse, ne Gabinius unus omnium nequissimus existimaretur. Eius populus ab incunabulis primis ad usque pueritiae tempus extremum, quod annis circumcluditur fere trecentis, circummurana pertulit bella, deinde aetatem ingressus adultam post multiplices bellorum aerumnas Alpes transcendit et fretum, in iuvenem erectus et virum ex omni plaga quam orbis ambit inmensus, reportavit laureas et triumphos, iamque vergens in senium et nomine solo aliquotiens vincens ad tranquilliora vitae discessit.</p>
-                        <br>
-                        <h2> Situation géographique :</h2>
-                        <p>Paris 15, 75015</p>
+
+                        <p>Quid? qui se etiam nunc subsidiis patrimonii aut amicorum liberalitate sustentant, hos perire patiemur?
+                            An, si qui frui publico non potuit per hostem, hic tegitur ipsa lege censoria; quem is frui non
+                            sinit, qui est, etiamsi non appellatur, hostis, huic ferri auxilium non oportet? Retinete igitur
+                            in provincia diutius eum, qui de sociis cum hostibus, de civibus cum sociis faciat pactiones,
+                            qui hoc etiam se pluris esse quam collegam putet, quod ille vos tristia voltuque deceperit, ipse
+                            numquam se minus quam erat, nequam esse simularit. Piso autem alio quodam modo gloriatur se brevi
+                            tempore perfecisse, ne Gabinius unus omnium nequissimus existimaretur. Eius populus ab incunabulis
+                            primis ad usque pueritiae tempus extremum, quod annis circumcluditur fere trecentis, circummurana
+                            pertulit bella, deinde aetatem ingressus adultam post multiplices bellorum aerumnas Alpes transcendit
+                            et fretum, in iuvenem erectus et virum ex omni plaga quam orbis ambit inmensus, reportavit laureas
+                            et triumphos, iamque vergens in senium et nomine solo aliquotiens vincens ad tranquilliora vitae
+                            discessit.</p>
                     </div>
                 </div>
             </div>
         </main>
         <footer>
+
             <div class="about">
+
                 <h2>À propos :</h2>
-                <p>Nous sommes une petite équipe de 3 personnes (Valentin Trinty, Romain Laze, Arno Dubois) basée à Champs-sur-Marne. Ceci est notre projet-tutoré, une plateforme de CV interactifs qui regroupe les Curricculum Vitae web des étudiants de la promotion MMI 2017-2018.</p>
+
+                <p>Nous sommes une petite équipe de 3 personnes (Valentin Trinty, Romain Laze, Arno Dubois) basée à Champs-sur-Marne.
+                    Ceci est notre projet-tutoré, une plateforme de CV interactifs qui regroupe les Curricculum Vitae web
+                    des étudiants de la promotion MMI 2017-2018.</p>
             </div>
+
             <div class="location">
+
                 <h2>IUT de Champs-sur-Marne</h2>
-                <p>
-                    Contact : Martine Thireau
+
+                <p> Contact : Martine Thireau
                     <br>
                     <a href="tel:+33160958590s">
-                            <i class="fas fa-phone"></i>
-                            +33 1 60 95 85 90
-                        </a>
+                        <i class="fas fa-phone"></i> +33 1 60 95 85 90 </a>
                     <br>
                     <a href="">
-                            <i class="fas fa-envelope"></i>
-                            <span class="mail"></span>
-                        </a>
+                        <i class="fas fa-envelope"></i>
+                        <span class="mail"></span>
+                    </a>
                 </p>
             </div>
         </footer>
     </div>
-    <script src="https://civi.arnaux.cf/js/app.js" defer></script>
-</body>
-
+    <script src="https://civi.arnaux.cf/js/app.js" defer></script> </body>
 </html>
